tenzir/tests/format_strings/backslash_fmt.tql
// test: ast
// error: true

from {x: f"\{42}"}
